# riot_api_manipulation

./: README.md  pyproject.toml
.github/: pull_request_template.md
docs/: CONTRIBUTING.md  EXAMPLES.md  ROUTE_COVERING.md  api_covering.md  apis_covering.md
docs/outputs/: output_matches.txt
riot_api/: __init__.py  requirements.txt  riot_api.py
riot_api_manipulation/: __init__.py  api_managers.py  enums.py  internal_helpers.py  object_classes.py  urls.py
tests/: test_account_v1.py  test_api_manager.py  test_champion_v3.py  test_match_v5.py  test_summoner_v4.py
