[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riot_api_manipulation"
version = "0.0.5"
authors = [
  { name="Hugo CASTELL", email="hugo.castell@outlook.fr" },
]
maintainers = [
  { name="Hugo CASTELL", email="hugo.castell@outlook.fr" },
]
description = "Helpers for RIOT API manipulation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Hugo-CASTELL/riot_api"
"Bug Tracker" = "https://github.com/Hugo-CASTELL/riot_api/issues"
