[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project]
name = "riot_api_manipulation"
version = "0.0.64"
dependencies = [
    "enum",
    "json",
    "time",
    "requests",
    "threading",
]
authors = [
  { name="Hugo CASTELL", email="hugo.castell@outlook.fr" },
]
maintainers = [
  { name="Hugo CASTELL", email="hugo.castell@outlook.fr" },
]
description = "Python library for manipulating Riot Games API easily"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Hugo-CASTELL/riot_api_manipulation"
"Bug Tracker" = "https://github.com/Hugo-CASTELL/riot_api_manipulation/issues"
"Documentation" = "https://github.com/Hugo-CASTELL/riot_api_manipulation/tree/main/docs/"
"API's routes covering" = "https://github.com/Hugo-CASTELL/riot_api_manipulation/tree/main/docs/api_covering.md"
